# landcover-sentinel2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/sample/chips/: aoi_00_image.npy  aoi_00_label.npy  aoi_01_image.npy  aoi_01_label.npy
data/sample/eurosat/AnnualCrop/: AnnualCrop_0.npy  AnnualCrop_1.npy  AnnualCrop_2.npy
data/sample/eurosat/Forest/: Forest_0.npy  Forest_1.npy  Forest_2.npy
data/sample/eurosat/HerbaceousVegetation/: HerbaceousVegetation_0.npy  HerbaceousVegetation_1.npy  HerbaceousVegetation_2.npy
data/sample/eurosat/Highway/: Highway_0.npy  Highway_1.npy  Highway_2.npy
data/sample/eurosat/Industrial/: Industrial_0.npy  Industrial_1.npy  Industrial_2.npy
data/sample/eurosat/Pasture/: Pasture_0.npy  Pasture_1.npy  Pasture_2.npy
data/sample/eurosat/PermanentCrop/: PermanentCrop_0.npy  PermanentCrop_1.npy  PermanentCrop_2.npy
data/sample/eurosat/Residential/: Residential_0.npy  Residential_1.npy  Residential_2.npy
data/sample/eurosat/River/: River_0.npy  River_1.npy  River_2.npy
data/sample/eurosat/SeaLake/: SeaLake_0.npy  SeaLake_1.npy  SeaLake_2.npy
notebooks/: 01_train_eurosat.ipynb  02_train_segmentation.ipynb
results/: eurosat.json  segmentation.json
scripts/: fetch_data.py  make_figures.py  make_results_table.py  make_sample_data.py  train_eurosat.py  train_gfm.py  train_segmentation.py
src/landcover/: __init__.py  classes.py  cli.py  datasets.py  indices.py  metrics.py  rf.py  splits.py
tests/: test_classes.py  test_cli.py  test_datasets.py  test_indices.py  test_metrics.py  test_rf_and_splits.py  test_train_smoke.py
